# Useful-Tools-of-Physics-Research

./: .gitignore  README.md  notice.txt  pyproject.toml  tools.toml
pages/physics/dipole_trap/: rb87_dipole_scaterring_rateVSwavelenth.html  rb87_dipole_trap_depthVSwavelenth.html
pages/physics/gaussian_beam/: single_lens_gaussian_beam_calculator.html  two_lens_gaussian_beam_calculator.html
research_tools_launcher/: __init__.py  app.py  config.py  runner.py
research_tools_launcher/static/: styles.css
research_tools_launcher/templates/: base.html  error.html  index.html  result.html  tool.html
scripts/: example_echo.py
tests/: test_app.py  test_config.py  test_runner.py
